# furgopi-client

./: Makefile  README.md  pyproject.toml  runner.py  temp.py
config/: main.yaml
furgopi_client/: gps_runner.py  latlong.py  temp.py  temperature_runner.py
furgopi_client/entities/: base_entity.py  gps_entity.py  temp_entity.py
furgopi_client/sensors/: pa1010d.py
sensors/: ds18b20.py
